--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@import 'svelte-jsoneditor/themes/jse-theme-dark.css';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
